--- a/css/style.css
+++ b/css/style.css
@@ -5,12 +5,6 @@
     /* font-family: 'Mulish', sans-serif; */
 }
 
-body {
-    width: 1440px;
-    height: 6940px;
-    margin: 0 auto;
-}
-
 :root {
     --primary-font: 'Mulish', sans-serif;
     --nav-color-1: #FF5400;
@@ -20,12 +14,12 @@ body {
 header>nav {
     display: flex;
     justify-content: space-between;
-    margin: 52px 0;
+    margin: 52px 135px;
 }
 
 header>nav .header_brand_name {
     display: flex;
-    gap: 20px;
+    gap: 10px;
 }
 
 header>nav .header_brand_name img {
@@ -47,14 +41,14 @@ header>nav .header_brand_name h1 span {
     color: #131318;
 }
 
-header>nav .nav_menu ul{
+header>nav .nav_menu ul {
     display: flex;
     gap: 44px;
     list-style: none;
     padding: 11px;
 }
 
-header>nav .nav_menu ul li a{
+header>nav .nav_menu ul li a {
     color: var(--nav-color-2);
     text-align: center;
     font-family: var(--primary-font);
@@ -65,6 +59,65 @@ header>nav .nav_menu ul li a{
     text-decoration: none;
 }
 
-header>nav .nav_menu ul li a span{
+header>nav .nav_menu ul li a span {
     color: var(--nav-color-1);
+}
+
+header>nav .menu_bars {
+    display: none;
+}
+
+@media screen and (max-width: 992px) {
+
+    header>nav {
+        margin: 40px 40px;
+    }
+
+    header>nav .header_brand_name img {
+        width: 32px;
+        height: 36px;
+        flex-shrink: 0;
+    }
+
+    header>nav .header_brand_name h1 {
+        font-size: 24px;
+
+    }
+
+    header>nav .nav_menu ul {
+        gap: 15px;
+        padding: 5px;
+    }
+
+    header>nav .nav_menu ul li a {
+        font-size: 16px;
+    }
+
+}
+
+@media screen and (max-width: 600px) {
+
+    header>nav {
+        margin: 19px 20px;
+    }
+
+    header>nav .header_brand_name img {
+        width: 28.724px;
+        height: 33.516px;
+        flex-shrink: 0;
+    }
+
+    header>nav .header_brand_name h1 {
+        font-size: 21.543px;
+
+    }
+
+    header>nav .nav_menu ul {
+        display: none;
+    }
+
+    header>nav .menu_bars {
+        display: block;
+        padding: 5px;
+    }
 }
