--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,9 @@
     box-sizing: border-box;
     /* font-family: 'Mulish', sans-serif; */
 }
+body{
+    margin: 0 20px;
+}
 
 :root {
     --primary-font: 'Mulish', sans-serif;
@@ -11,10 +14,15 @@
     --nav-color-2: #424247;
 }
 
+/*Header start*/
+header {
+    max-width: 1170px;
+    margin: 52px auto;
+}
+
 header>nav {
     display: flex;
     justify-content: space-between;
-    margin: 52px 135px;
 }
 
 header>nav .header_brand_name {
@@ -45,7 +53,7 @@ header>nav .nav_menu ul {
     display: flex;
     gap: 44px;
     list-style: none;
-    padding: 11px;
+    padding: 10px 0;
 }
 
 header>nav .nav_menu ul li a {
@@ -66,8 +74,12 @@ header>nav .nav_menu ul li a span {
 header>nav .menu_bars {
     display: none;
 }
+/*Header end*/
 
-@media screen and (max-width: 992px) {
+
+/*Expore Travel navbar responsive start */
+
+@media screen and (min-width: 601px) and (max-width: 992px) {
 
     header>nav {
         margin: 40px 40px;
@@ -94,11 +106,14 @@ header>nav .menu_bars {
     }
 
 }
+/*Expore Travel navbar 600px-992px responsive end */
 
+
+/*Expore Travel navbar responsive start */
 @media screen and (max-width: 600px) {
 
     header>nav {
-        margin: 19px 20px;
+        margin: 20px 20px;
     }
 
     header>nav .header_brand_name img {
@@ -121,3 +136,164 @@ header>nav .menu_bars {
         padding: 5px;
     }
 }
+/*Expore Travel navbar 600px responsive end */
+
+/* main section start */
+
+
+/*Expore Travel first section start */
+main .hero_item .explore_content {
+    max-width: 1170px;
+    height: 500px;
+    margin: 0 auto;
+    background-image: url('../Images/Group 13.png');
+    background-size: cover;
+    background-repeat: no-repeat;
+    border-radius: 16px;
+
+}
+
+main .hero_item .explore_content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+main .hero_item .explore_content h1 {
+    color: #FFF;
+    font-family: var(--primary-font);
+    font-size: 64px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: normal;
+}
+
+main .hero_item .explore_content p {
+    max-width: 676px;
+    color: #FFF;
+    text-align: center;
+    font-family: Mulish;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 21px;
+    margin-top: 24px;
+    margin-bottom: 20px;
+}
+
+main .hero_item .explore_content .explore_filter {
+    display: flex;
+    padding: 16px;
+    align-items: flex-start;
+    flex-wrap: wrap;
+    gap: 24px;
+    border-radius: 8px;
+    background: rgba(255, 255, 255, 0.30);
+}
+
+main .hero_item .explore_content .explore_filter input,
+select {
+    width: 174px;
+    height: 52px;
+    flex-shrink: 0;
+    border-radius: 8px;
+    background: #ffffff;
+    border: none;
+    outline: none;
+    padding: 15px;
+    color: #726f6f;
+
+}
+
+main .hero_item .explore_content .explore_filter button {
+    width: 174px;
+    height: 52px;
+    flex-shrink: 0;
+    border-radius: 8px;
+    background: #FF5400;
+    border: none;
+    outline: none;
+    color: #ffffff;
+    font-size: 16px;
+
+}
+
+main .hero_item .explore_content .explore_filter button:hover {
+    background: #ff6519;
+    color: #111111;
+    cursor: pointer;
+}
+
+main .hero_item .explore_content .explore_filter button i {
+    padding-right: 5px;
+}
+/*Expore Travel first section end */
+
+/*Expore Travel first section responsive start */
+@media screen and (min-width: 601px) and (max-width: 992px){
+    main .hero_item .explore_content{
+        margin: 40px 40px;
+        background-position: 50%;
+    }
+    main .hero_item .explore_content h1 {
+        font-size: 40px;
+    }
+    main .hero_item .explore_content p {
+        font-size: 18px;
+        padding: 0 25px;
+    }
+    main .hero_item .explore_content .explore_filter {
+        flex-direction: column;
+        gap: 20px;
+    }
+    main .hero_item .explore_content .explore_filter input,
+    select {
+        width: 305px;
+        height: 52px;  
+
+    }
+    main .hero_item .explore_content .explore_filter button{
+        width: 180px;
+        height: 52px;
+        margin: 0 auto;
+        font-size: 14px;
+    }
+}
+/*Expore Travel first section 601-992 px responsive end */
+
+/*Expore Travel first section responsive start */
+@media screen and (max-width: 600px) {
+    main .hero_item .explore_content{
+        margin: 20px 20px;
+        background-position: 50%;
+    }
+    main .hero_item .explore_content h1 {
+        font-size: 22px;
+    }
+
+    main .hero_item .explore_content p {
+        font-size: 16px;
+        line-height: 21px;
+        padding: 0 15px;
+    }
+
+    main .hero_item .explore_content .explore_filter {
+        flex-direction: column;
+        gap: 16px;
+    }
+
+    main .hero_item .explore_content .explore_filter input,
+    select {
+        width: 255px;
+        height: 52px;    
+
+    }
+    main .hero_item .explore_content .explore_filter button{
+        width: 255px;
+        height: 52px;
+        margin: 0 auto;
+    }
+
+}
+/*Expore Travel first section 600px responsive end */
