--- a/css/style.css
+++ b/css/style.css
@@ -3,14 +3,16 @@
     padding: 0;
     box-sizing: border-box;
     /* font-family: 'Mulish', sans-serif; */
+    /* font-family: 'Inter', sans-serif; */
 }
 
 body {
-    margin: 0 20px;
+    /* margin: 0 20px; */
 }
 
 :root {
     --primary-font: 'Mulish', sans-serif;
+    --secondary-font: 'Inter', sans-serif;
     --nav-color-1: #FF5400;
     --nav-color-2: #424247;
 }
@@ -818,7 +820,6 @@ main>#choose_us>.hotels_service .service p {
     font-style: normal;
     font-weight: 400;
     line-height: 26px;
-    /* 162.5% */
 }
 
 main>#choose_us>.price_guarantee {
@@ -876,23 +877,13 @@ main>#choose_us>.price_guarantee p {
         align-items: center;
     }
 
-    main>#choose_us>.hotels_service .hotels {
-        width: 100%;
-    }
-
-    main>#choose_us>.hotels_service .service {
-        width: 100%;
-    }
-
-    main>#choose_us>.hotels_service .hotels p,
-    main>#choose_us>.hotels_service .service p {
-        width: 100%;
-    }
-
+    main>#choose_us>.hotels_service .hotels,
+    main>#choose_us>.hotels_service .service,
     main>#choose_us>.price_guarantee {
-        width: 100%;
+        width: auto;
     }
-
+    main>#choose_us>.hotels_service .hotels p,
+    main>#choose_us>.hotels_service .service p,
     main>#choose_us>.price_guarantee p {
         width: 100%;
     }
@@ -944,9 +935,128 @@ main>#choose_us>.price_guarantee p {
         flex-shrink: 0;
     }
 
-
 }
 
 /*Choose Us 600px responsive section end*/
 
 /*Choose Us section end*/
+
+/*Footer start*/
+footer {
+    width: 100%;
+    height: 502px;
+    background: rgba(19, 19, 24, 0.05);
+}
+
+footer>.footer_content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+footer>.footer_content .head {
+    display: flex;
+    margin-top: 110px;
+    margin-bottom: 20px;
+    gap: 20px;
+
+}
+
+footer>.footer_content .head img {
+    width: 40px;
+    height: 46.673px;
+    flex-shrink: 0;
+}
+
+footer>.footer_content .head h1 {
+    padding-top: 5px;
+    color: #FF5400;
+    font-family: var(--primary-font);
+    font-size: 32px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: normal;
+}
+
+footer>.footer_content .head span {
+    color: var(--Dark-01, #131318);
+}
+
+footer>.footer_content .para {
+    width: 769px;
+}
+
+footer>.footer_content .para p {
+    color: #5A5A5D;
+    text-align: center;
+    font-family: var(--primary-font);
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 26px;
+    margin-bottom: 20px;
+}
+
+footer>.footer_content .icon {
+    width: 174.322px;
+    height: 24px;
+    display: flex;
+    justify-content: center;
+    flex-shrink: 0;
+    gap: 20px;
+}
+
+footer>.footer_content hr {
+    width: 872px;
+    height: 1px;
+    background: rgba(19, 19, 24, 0.10);
+    margin: 30px 0;
+}
+
+footer>.footer_content p {
+    color: #131318;
+    font-family: var(--secondary-font);
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 300;
+    line-height: normal;
+}
+
+/*footer responsive 992px start*/
+@media screen and (max-width: 992px) {
+    footer>.footer_content .para {
+        width: 569px;
+    }
+
+    footer>.footer_content hr {
+        width: 672px;
+    }
+}
+
+/*footer responsive 992px end*/
+
+/*footer responsive 600px start*/
+@media screen and (max-width: 600px) {
+    footer>.footer_content .head img {
+        width: 28.724px;
+        height: 33.516px;
+    }
+
+    footer>.footer_content .head h1 {
+        font-size: 21.543px;
+    }
+
+    footer>.footer_content .para {
+        width: 287px;
+    }
+
+    footer>.footer_content hr {
+        width: 335px;
+    }
+    footer>.footer_content p {
+        font-size: 14px;
+    }
+}
+/*footer responsive 600px end*/
+
+/*Footer end*/
