deals and discount section completed with responsive design

--- a/css/style.css
+++ b/css/style.css
@@ -882,6 +882,7 @@ main>#choose_us>.price_guarantee p {
     main>#choose_us>.price_guarantee {
         width: auto;
     }
+
     main>#choose_us>.hotels_service .hotels p,
     main>#choose_us>.hotels_service .service p,
     main>#choose_us>.price_guarantee p {
@@ -940,6 +941,301 @@ main>#choose_us>.price_guarantee p {
 /*Choose Us 600px responsive section end*/
 
 /*Choose Us section end*/
+
+
+
+/*deals and discount section start*/
+
+main>#deals_discounts {
+    max-width: 1170px;
+    margin: 0 auto;
+}
+
+main>#deals_discounts .heading_content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+    margin-bottom: 48px;
+    margin-left: 40px;
+    margin-right: 40px;
+}
+
+main>#deals_discounts .heading_content h1 {
+    color: #131318;
+    text-align: center;
+    font-family: var(--primary-font);
+    font-size: 40px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: normal;
+}
+
+main>#deals_discounts .heading_content p {
+    width: 643px;
+    color: rgba(19, 19, 24, 0.70);
+    text-align: center;
+    font-family: var(--primary-font);
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 26px;
+}
+
+main>#deals_discounts .first_bg_image {
+    height: 500px;
+    background-image: url('../Images/Group\ 39.png');
+    background-size: 100% no-repeat;
+    border-radius: 16px;
+    position: relative;
+}
+
+main>#deals_discounts .second_bg_image {
+    height: 500px;
+    background-image: url('../Images/Group\ 40.png');
+    background-size: 100% no-repeat;
+    border-radius: 16px;
+    position: relative;
+    margin: 24px 0;
+}
+
+main>#deals_discounts .third_bg_image {
+    height: 500px;
+    background-image: url('../Images/Group\ 39.png');
+    background-size: 100% no-repeat;
+    border-radius: 16px;
+    position: relative;
+}
+
+main>#deals_discounts .booking_1 {
+    position: absolute;
+    width: 579px;
+    height: 389px;
+    flex-shrink: 0;
+    border-radius: 16px;
+    border: 2px solid #FFF;
+    background: rgba(255, 255, 255, 0.80);
+    backdrop-filter: blur(2.5px);
+    top: 56px;
+    right: 56px;
+    padding: 50px;
+
+}
+
+main>#deals_discounts .second_bg_image .booking_1 {
+    position: absolute;
+    width: 579px;
+    height: 389px;
+    flex-shrink: 0;
+    border-radius: 16px;
+    border: 2px solid #FFF;
+    background: rgba(255, 255, 255, 0.80);
+    backdrop-filter: blur(2.5px);
+    top: 56px;
+    left: 56px;
+    padding: 50px;
+}
+
+main>#deals_discounts .booking_1 .icon_with_content {
+    display: flex;
+    margin-bottom: 26px;
+
+}
+
+main>#deals_discounts .booking_1 .icon_with_content i {
+    margin-right: 3px;
+    width: 24px;
+    height: 24px;
+    flex-shrink: 0;
+    color: #FF5400;
+
+}
+
+main>#deals_discounts .booking_1 .icon_with_content span {
+    color: #5A5A5D;
+    font-family: var(--primary-font);
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    margin-right: 20px;
+}
+
+main>#deals_discounts .booking_1 h1 {
+    color: #131318;
+    font-family: var(--primary-font);
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: normal;
+    margin-bottom: 16px;
+}
+
+main>#deals_discounts .booking_1 p {
+    width: 452px;
+    color: #5A5A5D;
+    font-family: var(--primary-font);
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 26px;
+    margin-bottom: 16px;
+}
+
+main>#deals_discounts .booking_1 h3 {
+    color: #FF5400;
+    font-family: var(--primary-font);
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: normal;
+    margin-bottom: 24px;
+}
+
+main>#deals_discounts .booking_1 button {
+    width: 150px;
+    height: 52px;
+    flex-shrink: 0;
+    border-radius: 8px;
+    background: #FF5400;
+    color: #ffffff;
+    outline: none;
+    border: none;
+    color: #FFF;
+    text-align: center;
+    font-family: var(--primary-font);
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: normal;
+}
+
+main>#deals_discounts .booking_1 button:hover {
+    background: #ff742f;
+    color: #111111;
+    cursor: pointer;
+}
+main>#deals_discounts .packages_button{
+    display: flex;
+    justify-content: center;
+    margin-top: 48px;
+    margin-bottom: 48px;
+}
+main>#deals_discounts .packages_button button {
+    width: 210px;
+    height: 52px;
+    flex-shrink: 0;
+    border-radius: 8px;
+    background: #FF5400;
+    color: #FFF;
+    text-align: center;
+    font-family: var(--primary-font);
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: normal;
+    border: none;
+    outline: none;
+
+}
+main>#deals_discounts .packages_button button:hover{
+    background: #ff7a37;
+    color: #000000;
+    cursor: pointer;
+}
+/*deals and discount responsive 1220px start*/
+@media screen and (max-width: 1220px) {
+    main>#deals_discounts .image_container{
+        margin: 0 40px;
+    }
+}
+/*deals and discount responsive 1220px end*/
+
+
+
+
+/*deals and discount responsive 992px start*/
+@media screen and (max-width: 992px) {
+    main>#deals_discounts .booking_1 {
+        width: 480px;
+        height: 310px;
+        padding: 30px;
+    }
+
+    main>#deals_discounts .second_bg_image .booking_1 {
+        width: 480px;
+        height: 310px;
+        padding: 20px;
+    }
+}
+
+/*deals and discount responsive 992px end*/
+
+/*deals and discount responsive start*/
+@media screen and (max-width: 685px) {
+    main>#deals_discounts .heading_content {
+        margin-left: 20px;
+        margin-right: 20px;
+    }
+
+    main>#deals_discounts .heading_content p {
+        width: auto;
+    }
+
+    main>#deals_discounts .first_bg_image,
+    main>#deals_discounts .second_bg_image,
+    main>#deals_discounts .third_bg_image {
+        margin: 20px 20px;
+    }
+
+    main>#deals_discounts .booking_1 {
+        width: 303px;
+        height: 297px;
+        padding: 25px;
+    }
+
+    main>#deals_discounts .second_bg_image .booking_1 {
+        width: 303px;
+        height: 297px;
+        padding: 20px;
+    }
+
+    main>#deals_discounts .booking_1 .icon_with_content {
+        margin-bottom: 10px;
+        flex-direction: column;
+        gap: 10px;
+    }
+
+    main>#deals_discounts .booking_1 h1 {
+        font-size: 20px;
+        margin-bottom: 10px;
+    }
+
+    main>#deals_discounts .booking_1 p {
+        font-size: 14px;
+        width: auto;
+        margin-bottom: 10px;
+    }
+
+    main>#deals_discounts .booking_1 h3 {
+        font-size: 16px;
+        margin-bottom: 15px;
+    }
+
+    main>#deals_discounts .booking_1 button {
+        width: 130px;
+        height: 40px;
+        flex-shrink: 0;
+        font-size: 18px;
+    }
+
+}
+
+/*deals and discount responsive 685px end*/
+
+/*deals and discount section end*/
+
+
 
 /*Footer start*/
 footer {
@@ -1053,10 +1349,12 @@ footer>.footer_content p {
     footer>.footer_content hr {
         width: 335px;
     }
+
     footer>.footer_content p {
         font-size: 14px;
     }
 }
+
 /*footer responsive 600px end*/
 
 /*Footer end*/
