Simple perfect place and video content section completed with responsive design

--- a/css/style.css
+++ b/css/style.css
@@ -1115,12 +1115,14 @@ main>#deals_discounts .booking_1 button:hover {
     color: #111111;
     cursor: pointer;
 }
-main>#deals_discounts .packages_button{
+
+main>#deals_discounts .packages_button {
     display: flex;
     justify-content: center;
     margin-top: 48px;
     margin-bottom: 48px;
 }
+
 main>#deals_discounts .packages_button button {
     width: 210px;
     height: 52px;
@@ -1138,17 +1140,20 @@ main>#deals_discounts .packages_button button {
     outline: none;
 
 }
-main>#deals_discounts .packages_button button:hover{
+
+main>#deals_discounts .packages_button button:hover {
     background: #ff7a37;
     color: #000000;
     cursor: pointer;
 }
+
 /*deals and discount responsive 1220px start*/
 @media screen and (max-width: 1220px) {
-    main>#deals_discounts .image_container{
+    main>#deals_discounts .image_container {
         margin: 0 40px;
     }
 }
+
 /*deals and discount responsive 1220px end*/
 
 
@@ -1235,7 +1240,160 @@ main>#deals_discounts .packages_button button:hover{
 
 /*deals and discount section end*/
 
+/*Perfect place and Video section start*/
+main>#perfect_place {
+    max-width: 1170px;
+    margin: 0 auto;
+}
 
+main>#perfect_place .perfect_place_content {
+    display: flex;
+    justify-content: center;
+    gap: 28px;
+    margin-bottom: 48px;
+    margin-left: 40px;
+    margin-right: 40px
+}
+
+main>#perfect_place .perfect_place_content .description h1 {
+    width: 448px;
+    color: #131318;
+    font-family: var(--primary-font);
+    font-size: 40px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: 60px;
+    margin-bottom: 16px;
+}
+
+main>#perfect_place .perfect_place_content .description p {
+    width: 532px;
+    color: #5A5A5D;
+    font-family: var(--primary-font);
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 26px;
+    margin-bottom: 16px;
+}
+
+main>#perfect_place .perfect_place_content .description ul {
+    width: 510px;
+    padding-left: 30px;
+    margin-bottom: 24px;
+
+}
+
+main>#perfect_place .perfect_place_content .description ul li {
+    color: #131318;
+    font-family: var(--primary-font);
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 26px;
+}
+
+main>#perfect_place .perfect_place_content .description button {
+    width: 174px;
+    height: 52px;
+    flex-shrink: 0;
+    border-radius: 8px;
+    background: #FF5400;
+    color: #FFF;
+    text-align: center;
+    font-family: var(--primary-font);
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: normal;
+    border: none;
+    outline: none;
+}
+
+main>#perfect_place .perfect_place_content .description button:hover {
+    background: #fa732f;
+    color: #111111;
+}
+
+main>#perfect_place .perfect_place_content .video_content {
+    width: 610px;
+    height: 424px;
+    flex-shrink: 0;
+    padding-top: 20px;
+    position: relative;
+}
+
+main>#perfect_place .perfect_place_content .video_content h3 {
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, 0);
+    width: 276px;
+    color: #FFF;
+    text-align: center;
+    font-family: var(--primary-font);
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 30px;
+    /* 150% */
+}
+
+main>#perfect_place .perfect_place_content .video_content video {
+    width: 100%;
+    border-radius: 16px;
+}
+
+/*Perfect place and Video responsive section start*/
+@media screen and (max-width: 1220px) {
+    main>#perfect_place .perfect_place_content {
+        flex-direction: column;
+        margin-top: 80px;
+    }
+
+    main>#perfect_place .perfect_place_content .description h1 {
+        width: auto;
+    }
+
+    main>#perfect_place .perfect_place_content .description p {
+        width: auto;
+    }
+
+    main>#perfect_place .perfect_place_content .description ul {
+        width: auto;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    main>#perfect_place .perfect_place_content {
+        flex-direction: column;
+        margin: 0 20px;
+    }
+
+    main>#perfect_place .perfect_place_content .description h1 {
+        font-size: 20px;
+    }
+
+    main>#perfect_place .perfect_place_content .description p {
+        font-size: 14px;
+    }
+
+    main>#perfect_place .perfect_place_content .description ul li {
+        font-size: 14px;
+    }
+
+    main>#perfect_place .perfect_place_content .video_content {
+        width: 335px;
+        height: 200px;
+        flex-shrink: 0;
+    }
+}
+
+/*Perfect place and Video responsive section end*/
+
+/*Perfect place and Video section end*/
+
+@media screen and (max-width: 1220px) {}
 
 /*Footer start*/
 footer {
